<resources>
    <string name="app_name">MyPlayMusic</string>
    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="playlists">Playlists</string>
    <string name="folders">Folders</string>
    <string name="play_button">play button</string>
    <string name="rewind_button">rewind button</string>
    <string name="fastword_button">fastword button</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="song_info">Song Info</string>
    <string name="actions">Song Actions</string>
    <string name="love_image_button">love song image button</string>
    <string name="shuffle_button_description">shuffle music</string>
    <string name="notification_title">MyPlayMusic Notification</string>
    <string name="notification_message">MusicPlayerService is running</string>
    <string name="ticker_text">MyPlayMusic Service is running</string>
    <string name="channel_name">My notification channel</string>
    <string name="channel_description">the notification channel for playing a song</string>
    <string name="album_art">album art</string>
</resources>