<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/song_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        tools:text="@string/songs" />

    <TextView
        android:id="@+id/artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        tools:text="@string/artists" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/rewind_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_baseline_fast_rewind_24"
            android:contentDescription="@string/rewind_button" />

        <ImageButton
            android:id="@+id/play_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_baseline_play_arrow_24"
            android:contentDescription="@string/play_button" />

        <ImageButton
            android:id="@+id/fastforward_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/fastword_button"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_baseline_fast_forward_24"
            tools:srcCompat="@drawable/ic_baseline_fast_forward_24" />

    </LinearLayout>

</LinearLayout>